--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -18,15 +18,26 @@
 }
 
 .user-nickname {
-  text-decoration: none;
+  width:100px;
+  font-size:14px;
+  color:red;
+  text-align:center;
+  display:block;
+  padding:10px 0 10px;
+  background:#6BCBF6;
+  border-radius: 20px;
   margin-right: 3vw;
-  color: #333333;
-  font-weight: bold;
 }
 
 .logout {
-  text-decoration: none;
-  color: #333333;
+  width:100px;
+  font-size:14px;
+  color:#FFFFFF;
+  text-align:center;
+  display:block;
+  padding:10px 0 10px;
+  background:#6BCBF6;
+  border-radius: 20px;
 }
 
 .login {
