--- a/app/assets/stylesheets/questions/index.scss
+++ b/app/assets/stylesheets/questions/index.scss
@@ -9,7 +9,7 @@ a {
 /* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
   width: 100vw;
-  background-image: image-url('furima-header01.png');
+  background-image: linear-gradient(to top, rgba(217, 175, 217, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),image-url('LAQ-header01.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -23,12 +23,25 @@ a {
 }
 
 .service-title {
-  font-size: 8vh;
+  display     : inline-block;
+  font-size   : 8vh;
+  font-weight : bold;
+  color       : #ffffff;
+  text-shadow:  2px  2px 10px #777 ,
+               -2px  2px 10px #777 ,
+                2px -2px 10px #777 ,
+               -2px -2px 10px #777;
 }
 
 .service-explain {
-  font-size: 2.5vh;
-  line-height: 40px;
+  display     : inline-block;
+  font-size   : 2.5vh;
+  font-weight : bold;
+  color       : #ffffff;
+  text-shadow:  2px  2px 10px #777 ,
+               -2px  2px 10px #777 ,
+                2px -2px 10px #777 ,
+               -2px -2px 10px #777;
 }
 
 .store-btn {
