--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,7 +4,7 @@
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      あなたのクイズが人生を変える
+      あなたのクイズが人生を変える!!
     </h2>
     <p class='service-explain'>
       LAQはだれでもかんたんに問題・解答を投稿できる
@@ -182,8 +182,8 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<%= link_to('#', class: 'purchase-btn') do %>
-  <span class='purchase-btn-text'>出品する</span>
+<%= link_to(new_question_path, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>投稿する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
 <%= render "shared/footer" %>
