--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -3,18 +3,28 @@
 }
 
 .top-page-header {
-  width: 100vw;
-  padding: 2vh 15vw;
+  height: 60px;
+  background-color: #000;
+  padding: 10px 0;
   display: flex;
-  flex-direction: column;
-  text-align: right;
 }
 
-.lists-right {
+.heading {
+  width: 50%;
+  margin-left: 30px;
+}
+
+.logo {
+  color: white;
+}
+
+.navbar {
+  width: 50%;
+}
+
+.nav-lists {
   display: flex;
-  list-style: none;
-  padding: 1vh 0;
-  margin:0 0 0 auto;
+  justify-content: flex-end;
 }
 
 .user-nickname {
