--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,40 @@
-<h2>Sign up</h2>
+<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+<div class='form-wrap'>
+  <div class='form-header'>
+    <h1 class='form-header-text'>
+      新規登録ページ
+    </h1>
+  </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="main-form">
   <%= render "devise/shared/error_messages", resource: resource %>
+  
+    <div class="form-group">
+      <label class="form-text">ニックネーム</label>
+        <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
-  </div>
+    <div class="form-group">
+      <label class="form-text">メールアドレス</label>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="form-group">
+      <label class="form-text">パスワード</label>
+        <%= f.password_field :password, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="form-group">
+      <label class="form-text">パスワード(確認用)</label>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="sign-up-button">
+      <%= f.submit "Sign up", class:"actions"%>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div class="log-in">
+      <%= link_to 'ログインの方はこちらをクリック', new_user_session_path %>
+    </div>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
