--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <%= form_with model: @question_answer, url:questions_path, local: true do |f| %>
   <div class="main-box">
     Let's Active Question
