--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,16 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='heading'>
-    <div class='logo'>(仮)</div>
+    <%= link_to image_tag("LAQ.png", class:"logo"), "/" %>
   </div>
   <div class='navbar'>
     <ul class='nav-lists'>
     <% if user_signed_in? %>
       <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
-      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "user-button" %></li>
     <% else %>
-      <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
-      <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+      <li><%= link_to 'ログイン', new_user_session_path, class: "user-button" %></li>
+      <li><%= link_to '新規登録', new_user_registration_path, class: "user-button" %></li>
     <% end %>
     </ul>
   </div>
