--- a/app/assets/stylesheets/questions/index.scss
+++ b/app/assets/stylesheets/questions/index.scss
@@ -6,7 +6,6 @@ a {
   background: #f8f8f8;
 }
 
-/* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
   width: 100vw;
   height: 50vh;
@@ -25,8 +24,8 @@ a {
 }
 
 .service-title {
-  display     : inline-block;
-  font-size   : 8vh;
+  display: inline-block;
+  font-size: 8vh;
   font-weight : bold;
   color       : #ffffff;
   text-shadow:  2px  2px 10px #777 ,
@@ -44,4 +43,57 @@ a {
                -2px  2px 10px #777 ,
                 2px -2px 10px #777 ,
                -2px -2px 10px #777;
+}
+
+.memory-mechanism {
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.memory-contents {
+  background-image: image-url('memory01.png');
+  width: 100vw;
+  height: 50vh;
+  background-repeat: no-repeat;
+  background-position: top center;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 5vh 15vw;
+}
+
+.app-description {
+  padding: 5vh 15vw;
+}
+
+.app-description>.title {
+  text-align: center;
+  font-size: 3.5vh;
+  font-weight: bold;
+  margin-bottom: 5vh;
+  font-family: Helvetica, Arial, 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
+}
+
+.str1 {
+  font-weight   : bold;
+  font-size     : 150%;
+}
+
+.laq-description {
+  font-family: Helvetica, Arial, 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
+  font-size: 3.5vh;
+  text-align: center;
+}
+
+.str2 {
+  font-weight   : bold;
+  font-size     : 150%;
+  color         : #ff0000; 
+}
+
+.laq-img {
+  width: 100vw;
+  height: 50vh;
 }
