--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,15 +5,16 @@
   </div>
   <div class='navbar'>
     <ul class='nav-lists'>
-    <% if user_signed_in? %>
-      <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
-      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "user-button" %></li>
-    <% else %>
-      <li><%= link_to 'ログイン', new_user_session_path, class: "user-button" %></li>
-      <li><%= link_to '新規登録', new_user_registration_path, class: "user-button" %></li>
-    <% end %>
+      <% if user_signed_in? %>
+        <% if @question > 0 %>
+          <li><%= link_to "現在の投稿数:#{@question}", "#", class: "header-button" %></li>
+        <% end %>
+        <li><%= link_to current_user.nickname, "#", class: "header-button" %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "header-button" %></li>
+      <% else %>
+        <li><%= link_to 'ログイン', new_user_session_path, class: "header-button" %></li>
+        <li><%= link_to '新規登録', new_user_registration_path, class: "header-button" %></li>
+      <% end %>
     </ul>
   </div>
-
 </header>
-
