マイページ仮作成

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @question_answer, url:questions_path, local: true do |f| %>
+<%= form_with model: @question, url:questions_path, local: true do |f| %>
   <div class="main-box">
     Let's Active Question
     <div class="question-box">
