--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,8 +12,8 @@
         </tr>
       <% @question.each do |question| %>
         <tr>
-          <td class="table__col2"><%= link_to "#{question.id}", "#" %>
-          <td class="table__col2"><%= "#{question.created_at}" %></td>
+          <td class="file_img"><%= link_to image_tag("file-icon.png", size: "40x40"), "#" %></td>
+          <td class="table__col2"><%= question.created_at.strftime('%Y/%m/%d') %></td>
           <td class="table__col2"><%= "#{question.quiz}" %></td>
         </tr>
       </tbody>
