--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @question, url:questions_path, local: true do |f| %>
+<%= form_with model: @question, url:question_path, local: true do |f| %>
   <div class="main-box">
     Let's Active Question
     <div class="question-box">
