--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,12 +9,19 @@
           <th class="table__col1">ファイル</th>
           <th class="table__col1">投稿日時</th>
           <th class="table__col1">問題</th>
+          <th class="table__col1">編集or削除</th>
         </tr>
       <% @question.each do |question| %>
         <tr>
           <td class="file_img"><%= link_to image_tag("file-icon.png", size: "40x40"), edit_question_path(question.id) %></td>
           <td class="table__col2"><%= question.created_at.strftime('%Y/%m/%d') %></td>
           <td class="table__col2"><%= "#{question.quiz}" %></td>
+          <td class="btn_style">
+            <%= link_to "編集", edit_question_path(question.id), method: :get, class:"edit-btn" %>
+              <%# <button class="btn">編集</button> %>
+            <%= link_to "削除", question_path(question.id), method: :delete, class:"destroy-btn" %>
+              <%# <button class="btn">削除</button> %>
+          </td>
         </tr>
       </tbody>
       <% end %>
@@ -30,7 +37,7 @@
   <%#</div>
   <%#<div class="response_text">
     <%= question.response %>
-  </div>
+  <%# </div> %>
   <%#<div class="description_text">
     <%= question.description %>
   <%#</div>
