--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/second-header" %>
 <%= form_with model: @answer, url:question_answers_path, local: true do |f| %>
   <div class="answer-main-box">
     Let's Active Question
@@ -14,3 +15,4 @@
       <%= f.submit "LAQ", class:"button" %>
   </div>
 <% end %>
+<%= render "shared/footer" %>
