--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -15,9 +15,9 @@
     記憶のメカニズム
   </h2>
   <div class="memory-contents">
-    <h2 class='service-title'>
-      すぐに忘れる!!
-    </h2>
+    <%# <h2 class='service-title'> %>
+      <%# すぐに忘れる!! %>
+    <%# </h2> %>
   </div>
   <div class='app-description'>
     <h2 class='title'>
