--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/second-header" %>
 <%= form_with model: @question, url:question_path, local: true do |f| %>
   <div class="main-box">
     Let's Active Question
@@ -7,5 +8,7 @@
       <%= f.text_area :response, class: "response", placeholder:"解答" %>
       <%= f.text_area :description, class: "description", placeholder: "説明" %>
       <%= f.submit "LAQ", class:"button" %>
+      <%= link_to "マイページに戻る", user_path(current_user.id), class:"mypage-back" %>
   </div>
 <% end %>
+<%= render "shared/footer" %>
