--- a/app/views/questions/check.html.erb
+++ b/app/views/questions/check.html.erb
@@ -7,17 +7,27 @@
     <tbody>
       <tr>
         <th class="check-table-col1">1回目<span class= "days">(2日後)</span></th>
+        <th class="check-table-col1">チェック</th>
         <th class="check-table-col1">2回目<span class= "days">(7日後)</span></th>
+        <th class="check-table-col1">チェック</th>
         <th class="check-table-col1">3回目<span class= "days">(16日後)</span></th>
+        <th class="check-table-col1">チェック</th>
         <th class="check-table-col1">4回目<span class= "days">(35日後)</span></th>
+        <th class="check-table-col1">チェック</th>
         <th class="check-table-col1">5回目<span class= "days">(62日後)</span></th>
+        <th class="check-table-col1">チェック</th>
       </tr>
       <tr>
-        <td class="check-table-col2"><%= @question.created_at.since(2.days).strftime('%Y/%m/%d') %>
-        <td class="check-table-col2"><%= @question.created_at.since(7.days).strftime('%Y/%m/%d') %>
-        <td class="check-table-col2"><%= @question.created_at.since(16.days).strftime('%Y/%m/%d') %>
-        <td class="check-table-col2"><%= @question.created_at.since(35.days).strftime('%Y/%m/%d') %>
-        <td class="check-table-col2"><%= @question.created_at.since(62.days).strftime('%Y/%m/%d') %>
+        <td class="check-table-col2"><%= @question.created_at.since(2.days).strftime('%Y/%m/%d') %></td>
+        <td class="check-table-col1"><%= check_box "object-name", "property-name" %></td>
+        <td class="check-table-col2"><%= @question.created_at.since(7.days).strftime('%Y/%m/%d') %></td>
+        <td class="check-table-col1"><%= check_box "object-name", "property-name" %></td>
+        <td class="check-table-col2"><%= @question.created_at.since(16.days).strftime('%Y/%m/%d') %></td>
+        <td class="check-table-col1"><%= check_box "object-name", "property-name" %></td>
+        <td class="check-table-col2"><%= @question.created_at.since(35.days).strftime('%Y/%m/%d') %></td>
+        <td class="check-table-col1"><%= check_box "object-name", "property-name" %></td>
+        <td class="check-table-col2"><%= @question.created_at.since(62.days).strftime('%Y/%m/%d') %></td>
+        <td class="check-table-col1"><%= check_box "object-name", "property-name" %></td>
       </tr>
     </tbody>
   </table>
