--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/second-header" %>
 <%= form_with model: @question, url:questions_path, local: true do |f| %>
   <div class="main-box">
     Let's Active Question
@@ -9,3 +10,4 @@
       <%= f.submit "LAQ", class:"button" %>
   </div>
 <% end %>
+<%= render "shared/footer" %>
