--- a/app/assets/stylesheets/questions/index.scss
+++ b/app/assets/stylesheets/questions/index.scss
@@ -7,8 +7,7 @@ a {
 }
 
 .title-contents {
-  width: 100vw;
-  height: 50vh;
+  padding: 180px 0 100px 0;
   background-image: linear-gradient(to top, rgba(217, 175, 217, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),image-url('LAQ-header01.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -17,7 +16,6 @@ a {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  padding: 5vh 15vw;
   color: #fff;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
   margin-bottom: 24px;
