トップページのトップ画面編集

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,16 +1,10 @@
 <%= render "shared/header" %>
-<div class='main'>
-  <div class='title-contents'>
-    <h2 class='service-title'>
-      あなたのクイズが人生を変える!!
-    </h2>
-    <p class='service-explain'>
-      LAQはだれでもかんたんに問題・解答を投稿できる
-    </p>
-    <p class='service-explain'>
-      アプリです
-    </p>
+<div class='top-wrapper'>
+  <div class='container'>
+      <h2 class='service-title'>あなたのクイズが人生を変える!!</h2>
+      <p class='service-explain'>LAQはだれでもかんたんに問題・解答を投稿できるアプリです</p>
   </div>
+</div>
   <h2 class='memory-mechanism'>
     記憶のメカニズム
   </h2>
