--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -48,6 +48,7 @@ a {
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
+    text-decoration:none;
 }
 
 /* change colours to suit your needs */
@@ -96,6 +97,6 @@ input, select {
 /* ここから */
 body {
   font-size: 15px;
-  font-family: Georgia, 游明朝, YuMincho, "Hiragino Mincho ProN", Meiryo, serif;
+  font-family: "Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
   line-height: 1.8;
 }
