--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-/* メインヘッダー(_header.html.erb) */
+// メインヘッダー(_header.html.erb)
 .first-header {
   width: 100%;
   height: 65px;
@@ -57,6 +57,7 @@
   border: 1px solid #f4f1f1;
   font-weight: bold;
   margin-right: 20px;
+  letter-spacing: 1px;
 }
 
 .header-btn:hover {
@@ -64,7 +65,7 @@
   background: #ffffff;
 }
 
-/* トップページ(questions/index.html.erb) */
+// トップページ(questions/index.html.erb)
 .top-wrapper {
   padding: 130px 0 100px 0;
   background-image: linear-gradient(to top, rgba(217, 175, 217, 0.7) 0%, rgba(151, 217, 225, 0.7) 100%),image-url('top-img.jpg');
@@ -96,6 +97,96 @@
                -2px  2px 10px #777,
                 2px -2px 10px #777,
                -2px -2px 10px #777;
+}
+
+// 新規登録画面(devise/registrations/new.html.erb)
+
+.signup-main {
+  background-color: #F2F6F7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 910px;
+}
+
+.main-form {
+  padding: 48px 64px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  box-shadow: 0 0 8px gray;
+  width: 600px;
+}
+
+.main-form .container {
+  flex-direction: column;
+}
+
+.form-heading {
+  text-align: center;
+  width: 100%;
+}
+
+.form-heading h1 {
+  font-size: 18px;
+  padding-bottom: 30px;
+}
+
+.form-heading p {
+  font-size: 15px;
+  color: #949697;
+  background-color: #FFFFFF;
+  padding: 0 10px
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+.form-label {
+  margin-bottom: 5px;
+}
+
+.form-text {
+  width: 100%;
+  border: 1px solid #d9d9d9;
+  background-color: #FBFBFB;
+  height: 35px;
+  padding-left: 7px;
+  font-size: 15px;
+}
+
+.signup-btn {
+  border-radius: 5px;
+  font-size: 15px;
+  cursor: pointer;
+  padding: 8px 12px;
+  color: #FFFFFF;
+  transition: .3s;
+  font-weight: bold;
+  background-color: #444444;
+  border: none;
+  opacity: .8;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.signup-btn:hover {
+  opacity: 1;
+}
+
+.login {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.login-btn {
+  color: #888888;
+  padding-bottom: 1px;
+  border-bottom: 1px solid #888888;
+}
+
+.login-btn:hover {
+  color: #111111;
 }
 
 /* ここから未編集 */
