解答フォーム編集

--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,7 +1,7 @@
-<%# CSS・・・assets/stylesheets/shared/header.css %>
-<header class='top-page-header'>
-  <div class='heading'>
-    <%= link_to image_tag("LAQ.png", class:"logo"), "/" %>
-    
+<header class='second-header'>
+  <div class="container">
+    <div class='header-left'>
+        <%= link_to "LAQ", "/", class:"header-logo" %>
+    </div>
   </div>
 </header>
