--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-// メインヘッダー(_header.html.erb)
+// メインヘッダーとサブヘッダー(_header.html.erb)
 .first-header {
   width: 100%;
   height: 65px;
@@ -10,6 +10,12 @@
   position: fixed;
   top: 0;
   z-index: 10;
+}
+
+.second-header {
+  width: 100%;
+  height: 65px;
+  background-color: rgba(34, 49, 52, 0.9);
 }
 
 .container {
@@ -99,101 +105,12 @@
                -2px -2px 10px #777;
 }
 
-// 新規登録画面(devise/registrations/new.html.erb)
-
-.signup-main {
-  background-color: #F2F6F7;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 910px;
-}
-
-.main-form {
-  padding: 48px 64px;
-  background-color: #FFFFFF;
-  border-radius: 5px;
-  box-shadow: 0 0 8px gray;
-  width: 600px;
-}
-
-.main-form .container {
-  flex-direction: column;
-}
-
-.form-heading {
-  text-align: center;
-  width: 100%;
-}
-
-.form-heading h1 {
-  font-size: 18px;
-  padding-bottom: 30px;
-}
-
-.form-heading p {
-  font-size: 15px;
-  color: #949697;
-  background-color: #FFFFFF;
-  padding: 0 10px
-}
-
-.form-group {
-  margin-bottom: 10px;
-}
-
-.form-label {
-  margin-bottom: 5px;
-}
-
-.form-text {
-  width: 100%;
-  border: 1px solid #d9d9d9;
-  background-color: #FBFBFB;
-  height: 35px;
-  padding-left: 7px;
-  font-size: 15px;
-}
-
-.signup-btn {
-  border-radius: 5px;
-  font-size: 15px;
-  cursor: pointer;
-  padding: 8px 12px;
-  color: #FFFFFF;
-  transition: .3s;
-  font-weight: bold;
-  background-color: #444444;
-  border: none;
-  opacity: .8;
-  width: 100%;
-  margin-top: 20px;
-}
-
-.signup-btn:hover {
-  opacity: 1;
-}
-
-.login {
-  text-align: center;
-  margin-top: 15px;
-}
-
-.login-btn {
-  color: #888888;
-  padding-bottom: 1px;
-  border-bottom: 1px solid #888888;
-}
-
-.login-btn:hover {
-  color: #111111;
-}
-
-/* ここから未編集 */
+// ここから未編集(トップページ)
 .memory-mechanism {
   font-size: 32px;
   font-weight: bold;
   text-align: center;
+  margin-top: 24px;
 }
 
 .memory-contents {
@@ -241,4 +158,198 @@
 .laq-img {
   width: 100vw;
   height: 50vh;
+}
+
+// 新規登録画面(devise/registrations/new.html.erb)
+
+.signup-main, .login-main {
+  background-color: #F2F6F7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 910px;
+}
+
+.main-form {
+  padding: 48px 64px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  box-shadow: 0 0 8px gray;
+  width: 600px;
+}
+
+.main-form .container {
+  flex-direction: column;
+}
+
+.form-heading {
+  text-align: center;
+  width: 100%;
+}
+
+.form-heading h1 {
+  font-size: 18px;
+  padding-bottom: 30px;
+}
+
+.form-heading p {
+  color: #949697;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.form-heading p::before,
+.form-heading p::after {
+  content: '';
+  width: 36%;
+  height: 1px;
+  background-color: #949697;
+}
+
+.form-heading p::before {
+  margin-right: 10px;
+}
+
+.form-heading p::after {
+  margin-left: 10px;
+}
+.form-group {
+  margin-bottom: 10px;
+}
+
+.form-label {
+  margin-bottom: 5px;
+}
+
+.form-text {
+  width: 100%;
+  border: 1px solid #d9d9d9;
+  background-color: #FBFBFB;
+  height: 50px;
+  padding-left: 7px;
+  font-size: 15px;
+  margin-bottom: 8px;
+}
+
+.signup-btn,
+.login-btn,
+.send-btn {
+  border-radius: 5px;
+  font-size: 15px;
+  cursor: pointer;
+  padding: 8px 12px;
+  color: #FFFFFF;
+  transition: .3s;
+  font-weight: bold;
+  background-color: #444444;
+  border: none;
+  opacity: .8;
+  width: 100%;
+  margin-top: 12px;
+}
+
+.signup-btn:hover,
+.login-btn:hover,
+.send-btn:hover {
+  opacity: 1;
+}
+
+.change {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.change-btn {
+  color: #888888;
+  padding-bottom: 1px;
+  border-bottom: 1px solid #888888;
+}
+
+.change-btn:hover {
+  color: #111111;
+}
+
+// 問題投稿画面
+
+.question-form,
+.answer-form {
+  background-color: #F2F6F7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 910px;
+}
+
+.question-form .main-form {
+  flex-direction: column;
+  display: flex;
+}
+
+.indispensable {
+  background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.question-form .form-text {
+  resize: none;
+  padding-top: 5px;
+}
+
+.sub-text {
+  width: 100%;
+  border: 1px solid #d9d9d9;
+  background-color: #FBFBFB;
+  height: 180px;
+  padding-left: 7px;
+  font-size: 15px;
+  resize: none;
+  padding-top: 5px;
+}
+.button {
+  display       : inline-block;
+  border-radius : 5%;
+  font-size     : 18pt;
+  text-align    : center;
+  cursor        : pointer;
+  padding       : 12px 12px;
+  background    : #00DD00;
+  color         : #ffffff;
+  line-height   : 1em;
+  transition    : .3s;
+  border        : 2px solid #004400;
+}
+
+.button:hover {
+  color         : #000066;
+  background    : #ffffff;
+}
+
+// 解答フォーム画面
+.answer-form .form-text {
+  resize: none;
+  height: auto;
+  margin-bottom: 18px;
+}
+
+.send-btn {
+  margin-top: 0;
+}
+
+.btn-position {
+  display: flex;
+  justify-content: center;
+}
+
+.answer-form .change-btn {
+  padding-bottom: 0;
+  margin-top: 10px;
 }
