--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,27 +3,27 @@
 <div class='main-form'>
   <div class='form-heading'>
     <h1>ユーザーアカウント作成</h1>
-    <span class="line"></span>
     <p>アカウント情報</p>
   </div>
+
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="form-group">
-    <p class="form-label">ニックネーム</p>
+    <p class="form-label">ニックネーム<span class="indispensable">必須</span></p>
     <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname", class:"form-text"%>
   </div>
 
   <div class="form-group">
-    <p class="form-label">メールアドレス</p>
+    <p class="form-label">メールアドレス<span class="indispensable">必須</span></p>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-text"%>
   </div>
 
   <div class="form-group">
-    <p class="form-label">パスワード</p>
+    <p class="form-label">パスワード<span class="indispensable">必須</span></p>
       <%= f.password_field :password, autocomplete: "new-password", class:"form-text"%>
   </div>
 
   <div class="form-group">
-    <p class="form-label">パスワード(確認用)</p>
+    <p class="form-label">パスワード<span class="indispensable">確認</span></p>
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-text"%>
   </div>
 
@@ -31,8 +31,9 @@
     <%= f.submit "アカウント作成", class:"signup-btn"%>
   </div>
 
-  <div class="login">
-    <%= link_to 'ログインの方はこちらをクリック', new_user_session_path, class:"login-btn" %>
+  <div class="change">
+    <span>すでにアカウントをお持ちですか?</span>
+    <%= link_to 'ログイン', new_user_session_path, class:"change-btn" %>
   </div>
 </div>
 <% end %>
