マイページ編集

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -20,5 +20,5 @@
 <div class="memory-contents">
 </div>
 <%= link_to(new_question_path, class: 'purchase-btn') do %>
-  <span class='purchase-btn-text'>LAQ</span>
+  <span class='purchase-btn-text'>投稿する</span>
 <% end %>
