--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -353,6 +353,7 @@
 // 答え合わせ画面
 .red {
   color: red;
+  font-weight: bold;
 }
 
 // 問題編集画面
@@ -363,4 +364,179 @@
 
 .back-btn:hover {
   color: #111111;
+}
+
+// 
+.layout-page {
+  padding: 40px 0px 50px;
+  justify-content: center;
+  color: rgb(44, 62, 80);
+}
+
+.layout-page .container {
+  justify-content: center;
+}
+
+.side-bar {
+  margin-right: 30px;
+  border-right: 1px solid rgb(227, 231, 232);
+  font-size: 19px;
+  padding: 10px 20px 10px 0px;
+}
+
+.side-bar-item {
+  margin: 20px 0 0 20px;
+}
+
+.name-field {
+  border-bottom: 1px solid rgb(227, 231, 232);
+  font-size: 30px;
+  padding: 20px;
+  font-weight: bold;
+  width: 480px;
+}
+
+.main-content {
+  padding: 20px;
+  margin-top: 20px;
+  border: 1px solid rgb(227, 231, 232);
+  border-radius: 3px;
+  font-size: 19px;
+}
+
+.main-content-text {
+  font-size: 27px;
+  margin-bottom: 35px;
+}
+
+.review-day {
+  text-align: right;
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
+.main-item {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(227, 231, 232);
+  border-radius: 3px;
+  padding: 10px 15px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 438px;
+  height: 55px;
+  box-shadow: 0 0 3px 0 rgba(0,0,0,.12), 0 2px 3px 0 rgba(0,0,0,.22);
+  transition: .3s;
+}
+
+.main-item:hover {
+  box-shadow: 0 15px 30px -5px rgba(0,0,0,.15), 0 0 5px rgba(0,0,0,.1);
+  transform: translateY(-4px);
+}
+
+.main-item-text {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 100%;
+  vertical-align: middle;
+}
+
+
+// モーダル
+.modal {
+  background: #fff;
+  width: 820px;
+  padding: 20px;
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  transition: transform 0.4s;
+  z-index: 2;
+  animation-name: fade;
+  animation-duration: 0.5s;
+}
+
+@keyframes fade{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.modal .main-item-text {
+  margin-bottom: 25px;
+}
+
+.modal h2 {
+  margin-bottom: 5px;
+}
+
+.question-text {
+  text-align: center;
+}
+
+.btn-answer,
+.btn-edit,
+.btn-destroy {
+  width : calc(96% / 3) ;
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #f7f7f7;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  text-align: center;
+}
+
+.btn-answer {
+  border-left: solid 20px #0000FF;
+  color: #0000FF;
+  margin-right: 10px
+}
+
+.btn-edit {
+  border-left: solid 20px #FF00FF;
+  color: #FF00FF;
+  margin-right: 10px;
+}
+
+.btn-destroy {
+  border-left: solid 20px #FF0000;
+  color: #FF0000;
+}
+.btn-answer:active,
+.btn-edit:active,
+.btn-destroy:active {
+  box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
+  transform: translateY(2px);
+}
+
+.hidden {
+  display: none;
+}
+
+.close {
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-align: center;
+  padding: 12px 0;
+  margin: 16px auto 0;
+  width: 32%;
+}
+
+#mask {
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
 }
