--- a/app/views/questions/check.html.erb
+++ b/app/views/questions/check.html.erb
@@ -2,7 +2,7 @@
 <div class="check-main">
   <table class="check-table">
     <h2 class="check-page-heading">
-      <%= @nickname %>さんの復習日一覧 
+      復習日一覧 
     </h2>
     <tbody>
       <tr>
