--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,13 +9,12 @@
   <h2 class='title'>
     <span class="str1">LAQ</span>とは？
   </h2>
-
-    <div class="laq-description">
-      <span class="str2">L</span>et's <span class="str2">A</span>ctive <span class="str2">Q</span>uestion
-    </div>
+  <div class="laq-description">
+    <span class="str2">L</span>et's <span class="str2">A</span>ctive <span class="str2">Q</span>uestion
+  </div>
 </div>
 <h2 class='memory-mechanism'>
-  記憶のメカニズム
+  LAQの使い方
 </h2>
 <div class="memory-contents">
 </div>
