--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -384,10 +384,16 @@
   padding: 10px 20px 10px 0px;
 }
 
-.side-bar-item {
+.side-bar-items {
   margin: 20px 0 0 20px;
 }
 
+.side-bar-item {
+  color: #2c3e50;
+}
+.side-bar-item:hover {
+  text-decoration: underline;
+}
 .name-field {
   border-bottom: 1px solid rgb(227, 231, 232);
   font-size: 30px;
@@ -426,12 +432,12 @@
   cursor: pointer;
   width: 438px;
   height: 55px;
-  box-shadow: 0 0 3px 0 rgba(0,0,0,.12), 0 2px 3px 0 rgba(0,0,0,.22);
+  
   transition: .3s;
 }
 
 .main-item:hover {
-  box-shadow: 0 15px 30px -5px rgba(0,0,0,.15), 0 0 5px rgba(0,0,0,.1);
+  box-shadow: 0 0 3px 0 rgba(0,0,0,.12), 0 2px 3px 0 rgba(0,0,0,.22);
   transform: translateY(-4px);
 }
 
@@ -510,6 +516,7 @@
   border-left: solid 20px #FF0000;
   color: #FF0000;
 }
+
 .btn-answer:active,
 .btn-edit:active,
 .btn-destroy:active {
